--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -2,7 +2,7 @@ nav {
   background: rgba(0, 0, 0, 0.3);
   width: max-content;
   display: block;
-  padding: 0.7rem 1.7rem;
+  padding: 0.5rem 0.5rem;
   z-index: 2;
   position: fixed;
   left: 50%;
@@ -13,18 +13,71 @@ nav {
   border-radius: 3rem;
   backdrop-filter: blur(15px);
 }
-nav a {
-  background: transparent;
-  padding: 0.9rem;
+nav .icon {
+  text-align: center;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  z-index: 2;
+  transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+nav .icon span {
+  display: block;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  position: relative;
+  z-index: 2;
+  transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+nav .icon span {
   border-radius: 50%;
   display: flex;
-  color: var(--color-light);
-  font-size: 1.1rem;
+  justify-content: center;
+  align-items: center;
 }
-nav a:hover {
+nav .icon:hover span {
   background: rgba(0, 0, 0, 0.3);
 }
-nav a.active {
+nav .icon span a {
+  font-size: 25px;
+}
+nav .icon .tooltip {
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(15px);
+  color: #fff;
+  padding: 10px 18px;
+  font-size: 15px;
+  font-weight: 500;
+  border-radius: 3rem;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+nav .icon:hover .tooltip {
+  top: -70px;
+  opacity: 1;
+  pointer-events: auto;
+}
+nav span.active {
   background: var(--color-primary);
-  color: var(--color-white);
+}
+nav span a.active {
+  color: #fff;
+}
+
+/*------------- MEDIA QUERIES (SMALL DEVICES)-------------------*/
+@media (max-width: 600px) {
+  nav {
+    padding: 0.3rem 0.2rem;
+  }
+  nav .icon {
+    margin: 0 4px;
+  }
 }
